--- a/Views/Photos/Details.cshtml
+++ b/Views/Photos/Details.cshtml
@@ -1,8 +1,8 @@
-﻿@*
+﻿@model aplikacja_zdjecia_z_wakacji.Models.Post
+
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-
-@model aplikacja_zdjecia_z_wakacji.Models.Post
 
 @{
 }
