--- a/Views/Photos/Add.cshtml
+++ b/Views/Photos/Add.cshtml
@@ -34,6 +34,7 @@
         <textarea asp-for="Opis" class="form-control" id="exampleFormControlTextarea1"></textarea>
     </div>
 
+    <input asp-for="User" type="text" class="form-control" value=@User.Identity.Name hidden/>
     <br />
     <div class="form-group">
         <label asp-for="Photo" for="exampleFormControlFile1">Zdjęcie:</label>
