--- a/Views/Photos/Details.cshtml
+++ b/Views/Photos/Details.cshtml
@@ -17,6 +17,7 @@
     <h3 class="card-text"><small class="text-muted">ID zdjęcia: @Model.Id</small></h3>
     <h3 class="card-title">Nazwa: @Model.Nazwa</h3>
     <p class="card-text"><small class="text-muted">Data: @Model.Data</small></p>
+    <p class="card-text">Dodane przez: @Model.User</p>
     <p class="card-text">Miejsce: @Model.Miejsce</p>
     <p class="card-text">Opis: @Model.Opis</p>
 </div>
