Dodanie możliwości polubienia posta

--- a/Views/Photos/Add.cshtml
+++ b/Views/Photos/Add.cshtml
@@ -17,19 +17,28 @@
 <form asp-controller="Photos" asp-action="Add" method="Post">
 
     <br/>
-    <div asp-validation-summary="All" class="text-danger" > </div>
+    <div asp-validation-summary="ModelOnly" class="text-danger" > </div>
 
     <div class="form-group">
+        <div>
+            <span asp-validation-for="Nazwa" class="text-danger"></span>
+        </div>
         <label asp-for="Nazwa">Nazwa: </label>
         <input asp-for="Nazwa" type="text" class="form-control" />
     </div>
 
     <div class="form-group">
+        <div>
+            <span asp-validation-for="Miejsce" class="text-danger"></span>
+        </div>
         <label asp-for="Miejsce">Miejsce: </label>
         <input asp-for="Miejsce" type="text" class="form-control" placeholder="Kraj, Miasto" />
     </div>
 
     <div class="form-group">
+        <div>
+            <span asp-validation-for="Opis" class="text-danger"></span>
+        </div>
         <label asp-for="Opis">Opis: </label>
         <textarea asp-for="Opis" class="form-control" id="exampleFormControlTextarea1"></textarea>
     </div>
