--- a/Views/Photos/Index.cshtml
+++ b/Views/Photos/Index.cshtml
@@ -27,6 +27,7 @@
                 <p class="card-text">@Model[i].Opis</p>
             </div>
             <div class="card-body">
+                <a asp-controller="Photos" asp-action="Like" asp-route-id=@Model[i].Id class="btn btn-outline-primary">Polub @Model[i].Likes.Count()</a>
                 <a asp-controller="Photos" asp-action="AddComment" asp-route-id=@Model[i].Id class ="btn btn-success">Dodaj komentarz</a>
                 <a asp-controller="Photos" asp-action="SeeComments" asp-route-id=@Model[i].Id class="btn btn-primary">Komentarze</a>
                 <a asp-controller="Photos" asp-action="Details" asp-route-id=@Model[i].Id class="btn btn-primary">Szczegóły</a>
