--- a/Views/Photos/AddComment.cshtml
+++ b/Views/Photos/AddComment.cshtml
@@ -17,9 +17,12 @@
 <form asp-controller="Photos" asp-action="AddComment" method="Post">
 
     <br />
-    <div asp-validation-summary="All" class="text-danger"> </div>
+    <div asp-validation-summary="ModelOnly" class="text-danger"> </div>
 
     <div class="form-group">
+        <div>
+            <span asp-validation-for="Tresc" class="text-danger"></span>
+        </div>
         <label asp-for="Tresc">Wprowadź treść: </label>
         <textarea asp-for="Tresc" class="form-control" id="exampleFormControlTextarea1"></textarea>
     </div>
