Zakładka statystyki dla admina

--- a/Views/Photos/Details.cshtml
+++ b/Views/Photos/Details.cshtml
@@ -10,7 +10,7 @@
 <h1>Szczegóły zdjęcia</h1>
 
 <br />
-<a asp-controller="Photos" asp-action="Index" class="btn btn-primary btn-lg">Wróć</a>
+<a asp-controller="Photos" asp-action="PagedIndex" class="btn btn-primary btn-lg">Wróć</a>
 <br />
 
 <div>
