--- a/Views/Photos/PagedIndex.cshtml
+++ b/Views/Photos/PagedIndex.cshtml
@@ -9,6 +9,7 @@
 <br />
 <p class="text-center">
     <a asp-controller="Photos" asp-action="Add" class="btn btn-primary btn-lg">Dodaj własne zdjęcie</a>
+    <a asp-controller="Photos" asp-action="Statistics" class="btn btn-outline-primary btn-lg">Statystyki</a>
 </p>
 <br />
 
@@ -37,26 +38,24 @@
 </div>
 <br />
 
-<p class="text-center">
-    <nav aria-label="Photos page navigation">
-        <ul class="pagination">
-            @if (Model.IsPrevious)
-            {
-                <li class="page-item"><a class="page-link" asp-controller="Photos" asp-action="PagedIndex" asp-route-page="@(Model.Number - 1)" asp-route-size="3">Poprzednia</a></li>
-            }
-            else
-            {
-                <li class="page-item disabled"><a class="page-link">Poprzednia</a></li>
-            }
-            <li class="page-item disabled"><a class="page-link">@Model.Number</a></li>
-            @if (Model.IsNext)
-            {
-                <li class="page-item"><a class="page-link" asp-controller="Photos" asp-action="PagedIndex" asp-route-page="@(Model.Number + 1)" asp-route-size="3">Następna</a></li>
-            }
-            else
-            {
-                <li class="page-item disabled"><a class="page-link">Następna</a></li>
-            }
-        </ul>
-    </nav>
-</p>
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+        @if (Model.IsPrevious)
+        {
+            <li class="page-item"><a class="page-link" asp-controller="Photos" asp-action="PagedIndex" asp-route-page="@(Model.Number - 1)" asp-route-size="3">&laquo;</a></li>
+        }
+        else
+        {
+            <li class="page-item disabled"><a class="page-link">&laquo;</a></li>
+        }
+        <li class="page-item disabled"><a class="page-link">@Model.Number</a></li>
+        @if (Model.IsNext)
+        {
+            <li class="page-item"><a class="page-link" asp-controller="Photos" asp-action="PagedIndex" asp-route-page="@(Model.Number + 1)" asp-route-size="3">&raquo;</a></li>
+        }
+        else
+        {
+            <li class="page-item disabled"><a class="page-link">&raquo;</a></li>
+        }
+    </ul>
+</nav>
