--- a/Views/Photos/Add.cshtml
+++ b/Views/Photos/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model aplikacja_zdjecia_z_wakacji.Models.Post
+﻿@model aplikacja_zdjecia_z_wakacji.Models.Photo
 
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
@@ -8,7 +8,7 @@
     ViewData["Title"] = "Add";
 }
 
-<h1>Dodawanie posta</h1>
+<h1>Dodawanie zdjęcia</h1>
 
 <br />
 <a asp-controller="Photos" asp-action="Index" class="btn btn-primary btn-lg">Wróć</a>
