--- a/Views/Photos/AddComment.cshtml
+++ b/Views/Photos/AddComment.cshtml
@@ -28,7 +28,7 @@
     </div>
 
     <input asp-for="User" type="text" class="form-control" value=@User.Identity.Name hidden />
-    <input asp-for="PostId" type="text" class="form-control" value=@ViewBag.Id hidden />
+    <input asp-for="PhotoId" type="text" class="form-control" value=@ViewBag.Id hidden />
 
     <br />
 
