--- a/Views/Photos/Statistics.cshtml
+++ b/Views/Photos/Statistics.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<aplikacja_zdjecia_z_wakacji.Models.Post>
+﻿@model List<aplikacja_zdjecia_z_wakacji.Models.Photo>
 
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
@@ -13,43 +13,49 @@
 
 <br />
 
-<table class="table">
-    <thead>
-        <tr>
-            <th scope="col">Zdjęcie</th>
-            <th scope="col">Id</th>
-            <th scope="col">Nazwa</th>
-            <th scope="col">Miejsce</th>
-            <th scope="col">Data</th>
-            <th scope="col">Użytkownik</th>
-            <th scope="col">Opis</th>
-            <th scope="col">Nazwa pliku</th>
-            <th scope="col">Liczba komentarzy</th>
-            <th scope="col">Liczba polubień</th>
-            <th scope="col">Akcje</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach(var e in Model){
+@if (Model.Count() == 0)
+{
+    <h3 class="text-center">Brak zdjęć</h3>
+    <br />
+}
+else{
+    <table class="table">
+        <thead>
             <tr>
-                <td>
-                    <img class="card-img-top" src="@("~/Images/" + @e.FileName)" asp-append-version="true" alt="photo">
-                </td>
-                <td>@e.Id</td>
-                <td>@e.Nazwa</td>
-                <td>@e.Miejsce</td>
-                <td>@e.Data</td>
-                <td>@e.User</td>
-                <td>@e.Opis</td>
-                <td>@e.FileName</td>
-                <td>@e.Comments.Count()</td>
-                <td>@e.Likes.Count()</td>
-                <td>
-                    <button asp-controller="Photos" asp-action="Edit" asp-route-id=@e.Id type ="button" class="btn btn-primary">Edytuj</button>
-                    <br />
-                    <button asp-controller="Photos" asp-action="Delete" asp-route-id=@e.Id type ="button" class="btn btn-danger">Usuń</button>
-                </td>
+                <th scope="col">Zdjęcie</th>
+                <th scope="col">Id</th>
+                <th scope="col">Nazwa</th>
+                <th scope="col">Miejsce</th>
+                <th scope="col">Data</th>
+                <th scope="col">Użytkownik</th>
+                <th scope="col">Opis</th>
+                <th scope="col">Nazwa pliku</th>
+                <th scope="col">Liczba komentarzy</th>
+                <th scope="col">Liczba polubień</th>
+                <th scope="col">Akcje</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach(var e in Model){
+                <tr>
+                    <td>
+                        <img class="card-img-top" src="@("~/Images/" + @e.FileName)" asp-append-version="true" alt="photo">
+                    </td>
+                    <td>@e.Id</td>
+                    <td>@e.Nazwa</td>
+                    <td>@e.Miejsce</td>
+                    <td>@e.Data</td>
+                    <td>@e.User</td>
+                    <td>@e.Opis</td>
+                    <td>@e.FileName</td>
+                    <td>@e.Comments.Count()</td>
+                    <td>@e.Likes.Count()</td>
+                    <td>
+                        <a asp-controller="Photos" asp-action="Edit" asp-route-id=@e.Id type ="button" class="btn btn-primary">Edytuj</a>
+                        <a asp-controller="Photos" asp-action="Delete" asp-route-id=@e.Id type ="button" class="btn btn-danger">Usuń</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
