--- a/Views/Photos/Details.cshtml
+++ b/Views/Photos/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model aplikacja_zdjecia_z_wakacji.Models.Post
+﻿@model aplikacja_zdjecia_z_wakacji.Models.Photo
 
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
